assets/scss/_nav.scss
// Main navbar

.td-navbar-cover {
  @include media-breakpoint-up(md) {
    background: transparent !important;

    .nav-link {
      text-shadow: 1px 1px 2px $dark;
    }
  }

  &.navbar-bg-onscroll .nav-link {
    text-shadow: none;
  }
}

.navbar-bg-onscroll {
  background: $primary !important;
  opacity: inherit;
}

.td-navbar {
  @extend .navbar;
  @extend .navbar-expand;

  background: $td-navbar-color;
  margin: 0;
  z-index: 32;
  box-shadow:
    0 3px 5px -1px #0003,
    0 6px 10px #00000024,
    0 1px 18px #0000001f;

  .navbar-brand {
    text-transform: none;

    &__name {
      font-weight: $font-weight-bold;
    }

    svg {
      display: inline-block;
      margin: 0 10px;
      height: $logo-height;
    }
  }

  .navbar-nav {
    padding-top: $spacer * 0.5;
    white-space: nowrap;
  }

  .nav-link {
    text-transform: none;
    &:hover {
      color: $secondary;
    }
  }

  .active {
    color: $text-primary;
    border-bottom: 2px solid $secondary;
  }

  // For .td-search__input styling, see _search.scss

  .dropdown {
    min-width: 100px;
  }

  @include media-breakpoint-up(md) {
    position: fixed;
    top: 0;
    width: 100%;
    height: 56px;

    .nav-item {
      padding-inline-end: $spacer * 0.5;
    }

    .navbar-nav {
      padding-top: 0 !important;
    }
  }

  @include media-breakpoint-down(lg) {
    min-height: 4rem;

    .td-navbar-nav-scroll {
      max-width: 100%;
      height: 2.5rem;
      overflow: hidden;
      font-size: 1.2rem;
    }

    .td-navbar-social {
      max-width: 100%;
      height: 2.5rem;
      overflow: hidden;
      font-size: 0.9rem;
    }

    .navbar-brand {
      margin-right: 0;
    }

    .navbar-nav {
      padding-bottom: 2rem;
      overflow-x: auto;
    }
  }
}

// Icons
#main_navbar {
  li i {
    padding-right: 0.5em;

    &:before {
      display: inline-block;
      text-align: center;
      min-width: 1em;
    }
  }
  .alert {
    background-color: inherit;
    padding: 0;
    color: $secondary;
    border: 0;
    font-weight: inherit;

    &:before {
      display: inline-block;
      font-style: normal;
      font-variant: normal;
      text-rendering: auto;
      -webkit-font-smoothing: antialiased;
      font-family: $font-awesome-font-name;
      font-weight: 900;
      content: "\f0d9";
      padding-left: 0.5em;
      padding-right: 0.5em;
    }
  }
}

// Foldable sidebar menu
nav.foldable-nav {
  &#td-section-nav {
    position: relative;
  }

  &#td-section-nav label {
    margin-bottom: 0;
    width: 100%;
  }

  .td-sidebar-nav__section,
  .with-child ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  .ul-1 > li {
    padding-left: 1.5em;
  }

  ul.foldable {
    display: none;
  }

  input:checked ~ ul.foldable {
    display: block;
  }

  input[type="checkbox"] {
    display: none;
  }

  .with-child,
  .without-child {
    position: relative;
    padding-left: 1.5em;
  }

  .ul-1 .with-child > label:before {
    color: $secondary;
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font-family: $font-awesome-font-name;
    font-weight: 900;
    content: "\f0da";
    position: absolute;
    left: 0.1em;
    padding-left: 0.4em;
    padding-right: 0.4em;
    font-size: 1em;
    transition: all 0.5s;
    &:hover {
      transform: rotate(90deg);
    }
  }

  .ul-1 .with-child > input:checked ~ label:before {
    color: $primary;
    transform: rotate(90deg);
    transition: transform 0.5s;
  }

  .with-child ul {
    margin-top: 0.1em;
  }
}

@media (hover: hover) and (pointer: fine) {
  nav.foldable-nav {
    .ul-1 .with-child > label:hover:before {
      color: $primary;
      transition: color 0.3s;
    }

    .ul-1 .with-child > input:checked ~ label:hover:before {
      color: $primary;
      transition: color 0.3s;
    }
  }
}

.socials-box {
  display: flex;
  width: 100%;
  justify-content: end;
}

.socials-footer {
  display: flex;
  justify-content: center;
  flex-direction: row;
}
.socials-footer-item {
  padding-left: 20px;
  padding-right: 20px;
  // &:hover {
  //   color: $secondary;
  // }
}

.svg-link {
  border: solid;
  border-color: #0000;
  border-radius: 80px !important;
  max-width: -moz-fit-content;
  max-width: fit-content;
  padding: 8px;
  &:hover {
    background: rgba($primary, 0.08);
    color: $secondary;
  }
}

